# muce

./: .gitignore  CLAUDE.md  README-CN.md  README.md  pyproject.toml
.claude/skills/devlog-maintainer/: SKILL.md
docs/: README.md
docs/adr/: 0001-a-share-data-layer.md  0002-dual-backtesting-backends.md  0003-backtrader-validation-engine.md  0004-vectorbt-research-engine.md  0005-technical-indicator-layer.md  0006-daily-stock-selector.md  0007-full-market-storage-and-query-layer.md  0008-selector-hit-rate-validation.md  0009-fastapi-readonly-backend.md
docs/backlog/: current.md
docs/devlog/: 2026-05-07-project-origin-and-v1-implementation.md  2026-05-07-three-falling-buy-three-rising-sell.md  2026-05-07-three-rising-factor-mvp.md  2026-05-07-vectorbt-research-engine.md  2026-05-08-daily-stock-selector.md  2026-05-08-full-market-data-prep.md  2026-05-08-technical-indicator-layer.md  2026-05-09-validation-gap-diagnostics.md  2026-05-10-fastapi-readonly-backend.md  2026-05-11-web-frontend.md  CHANGELOG.md
docs/devlog/appendix/: backtrader-validation.md  documentation-process.md
docs/devlog/current/: capabilities.md  overview.md  prd.md  task-backlog.md
docs/devlog/records/: ADR-001_2026-05-07_a-share-data-layer.md  ADR-002_2026-05-07_dual-backtesting-backends.md  ADR-003_2026-05-07_backtrader-validation-engine.md  ADR-004_2026-05-07_vectorbt-research-engine.md  ADR-005_2026-05-08_technical-indicator-layer.md  ADR-006_2026-05-08_daily-stock-selector.md  ADR-007_2026-05-08_full-market-storage-and-query-layer.md  ADR-008_2026-05-09_selector-hit-rate-validation.md  ADR-009_2026-05-10_fastapi-readonly-backend.md  ADR-010_2026-05-07_three-falling-buy-strategy.md  ADR-011_2026-05-11_web-frontend-stack.md  README.md
docs/guides/: backtrader-validation.md  documentation-process.md
docs/requirements/: maturity-gap-roadmap.md
src/quant_backtest/: __init__.py  cli_backtest.py  cli_data.py  cli_selection.py
src/quant_backtest/api/: __init__.py  app.py  (+3 more)
tests/: conftest.py  test_api_data.py  test_api_health.py  test_api_reports.py  test_api_selection.py  test_backtrader_engine.py  test_cache_and_adapters.py  test_cli.py  test_cross_engine_consistency.py  test_duckdb_reader.py  test_indicators.py  test_quality.py  test_reports_store.py  test_selection.py  test_services_data.py  test_services_selection.py  test_symbols_and_constants.py  test_talib_oracle.py  test_vectorbt_engine.py
web/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
web/app/: error.tsx  globals.css  layout.tsx
web/lib/: api-generated.ts  api-types.ts  api.ts  csv.ts  format.ts  queries.ts  query-client.ts  sse.ts  url-state.ts
web/styles/: tokens.css
(+84 files in other folders)
